tests/spec/emit/snapshots/try_block_basic_result.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn risky() -> Result<int, string> {
    Ok(42)
  }
  
  fn test() -> int {
    let result: Result<int, string> = try {
      risky()?
    };
    match result {
      Ok(x) => x,
      Err(_) => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func risky() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](42)
}

func test() int {
	result := func() lisette.Result[int, string] {
		check := risky()
		if check.Tag != lisette.ResultOk {
			return check
		}
		return lisette.MakeResultOk[int, string](check.OkVal)
	}()
	if result.Tag == lisette.ResultOk {
		return result.OkVal
	}
	return 0
}
