tests/spec/emit/snapshots/try_block_bindings_do_not_leak.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn parse(s: string) -> Result<int, string> {
    if s == "42" { Ok(42) } else { Err("bad") }
  }
  
  fn main() {
    let x = 100
    fmt.Println(x)
    let x = 200
  
    let result = try {
      let x = parse("42")?
      x + 1
    }
  
    match result {
      Ok(v) => fmt.Println(v),
      Err(e) => fmt.Println(e),
    }
  
    fmt.Println(x)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func parse(s string) lisette.Result[int, string] {
	if s == "42" {
		return lisette.MakeResultOk[int, string](42)
	}
	return lisette.MakeResultErr[int, string]("bad")
}

func main() {
	x := 100
	fmt.Println(x)
	x_1 := 200
	result := func() lisette.Result[int, string] {
		check := parse("42")
		if check.Tag != lisette.ResultOk {
			return check
		}
		x := check.OkVal
		return lisette.MakeResultOk[int, string](x + 1)
	}()
	if result.Tag == lisette.ResultOk {
		fmt.Println(result.OkVal)
	} else {
		fmt.Println(result.ErrVal)
	}
	fmt.Println(x_1)
}
