tests/spec/emit/snapshots/try_block_diverging_final_expression.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn risky() -> Result<int, string> { Ok(1) }
  
  fn test() {
    let result: Result<int, string> = try {
      let _ = risky()?;
      loop { panic("unreachable") }
    };
    let _ = result;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func risky() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](1)
}

func test() {
	result := func() lisette.Result[struct{}, string] {
		check := risky()
		if check.Tag != lisette.ResultOk {
			return lisette.MakeResultErr[struct{}, string](check.ErrVal)
		}
		for {
			panic("unreachable")
		}
	}()
	_ = result
}
