tests/spec/emit/snapshots/try_block_early_exit_with_err.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(bad: bool) -> int {
    let result: Result<int, string> = try {
      if bad {
        Err("failed")?
      }
      42
    };
    match result {
      Ok(x) => x,
      Err(_) => -1,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(bad bool) int {
	result := func() lisette.Result[int, string] {
		if bad {
			return lisette.MakeResultErr[int, string]("failed")
		}
		return lisette.MakeResultOk[int, string](42)
	}()
	if result.Tag == lisette.ResultOk {
		return result.OkVal
	}
	return -1
}
