tests/spec/emit/snapshots/try_block_final_let_unit_result.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn f() -> Result<(), string> {
    try {
      let x = Ok(1)?
    }
  }
  
  fn test() -> Result<(), string> {
    f()
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func f() lisette.Result[struct{}, string] {
	check_1 := lisette.MakeResultOk[int, string](1)
	if check_1.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[struct{}, string](check_1.ErrVal)
	}
	return lisette.MakeResultOk[struct{}, string](struct{}{})
}

func test() lisette.Result[struct{}, string] {
	return f()
}
