tests/spec/emit/snapshots/try_block_loop_inside.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn get_items() -> Result<Slice<int>, string> { Ok([1, 2, 3]) }
  
  fn test() -> int {
    let result = try {
      let items = get_items()?;
      let mut sum = 0;
      for item in items {
        if item > 10 {
          break;
        }
        sum = sum + item;
      };
      sum
    };
    match result {
      Ok(s) => s,
      Err(_) => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getItems() lisette.Result[[]int, string] {
	return lisette.MakeResultOk[[]int, string]([]int{1, 2, 3})
}

func test() int {
	result := func() lisette.Result[int, string] {
		check := getItems()
		if check.Tag != lisette.ResultOk {
			return lisette.MakeResultErr[int, string](check.ErrVal)
		}
		items := check.OkVal
		sum := 0
		for _, item := range items {
			if item > 10 {
				break
			}
			sum += item
		}
		return lisette.MakeResultOk[int, string](sum)
	}()
	if result.Tag == lisette.ResultOk {
		return result.OkVal
	}
	return 0
}
