tests/spec/emit/snapshots/try_block_multiple_question_marks.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn get_a() -> Result<int, string> { Ok(10) }
  fn get_b() -> Result<int, string> { Ok(20) }
  
  fn test() -> int {
    let result = try {
      let a = get_a()?;
      let b = get_b()?;
      a + b
    };
    match result {
      Ok(sum) => sum,
      Err(_) => 0,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getA() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](10)
}

func getB() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](20)
}

func test() int {
	result := func() lisette.Result[int, string] {
		check := getA()
		if check.Tag != lisette.ResultOk {
			return check
		}
		a := check.OkVal
		check_1 := getB()
		if check_1.Tag != lisette.ResultOk {
			return check_1
		}
		b := check_1.OkVal
		return lisette.MakeResultOk[int, string](a + b)
	}()
	if result.Tag == lisette.ResultOk {
		return result.OkVal
	}
	return 0
}
