tests/spec/emit/snapshots/try_block_nested.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn risky_a() -> Result<int, string> { Ok(1) }
  fn risky_b() -> Result<int, string> { Ok(2) }
  
  fn test() -> int {
    let outer = try {
      let inner: Result<int, string> = try {
        risky_a()?
      };
      let inner_val = match inner {
        Ok(x) => x,
        Err(_) => 0,
      };
      inner_val + risky_b()?
    };
    match outer {
      Ok(x) => x,
      Err(_) => -1,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func riskyA() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](1)
}

func riskyB() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](2)
}

func test() int {
	outer := func() lisette.Result[int, string] {
		inner := func() lisette.Result[int, string] {
			check := riskyA()
			if check.Tag != lisette.ResultOk {
				return check
			}
			return lisette.MakeResultOk[int, string](check.OkVal)
		}()
		var inner_val int
		if inner.Tag == lisette.ResultOk {
			inner_val = inner.OkVal
		} else {
			inner_val = 0
		}
		check_1 := riskyB()
		if check_1.Tag != lisette.ResultOk {
			return check_1
		}
		return lisette.MakeResultOk[int, string](inner_val + check_1.OkVal)
	}()
	if outer.Tag == lisette.ResultOk {
		return outer.OkVal
	}
	return -1
}
